Working on unit tests